--- a/IOCP_Study/IOCP_Study.vcxproj
+++ b/IOCP_Study/IOCP_Study.vcxproj
@@ -127,15 +127,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ClientSession.cpp" />
     <ClCompile Include="EchoServer.cpp" />
     <ClCompile Include="IOCPNetwork.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Packet.cpp" />
+    <ClCompile Include="util.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ClientSession.h" />
     <ClInclude Include="Define.h" />
     <ClInclude Include="EchoServer.h" />
     <ClInclude Include="IOCPNetwork.h" />
     <ClInclude Include="IServer.h" />
+    <ClInclude Include="Packet.h" />
+    <ClInclude Include="util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
