--- a/IOCP_Study/IOCP_Study.vcxproj.filters
+++ b/IOCP_Study/IOCP_Study.vcxproj.filters
@@ -30,6 +30,15 @@
     <ClCompile Include="EchoServer.cpp">
       <Filter>소스 파일\Server</Filter>
     </ClCompile>
+    <ClCompile Include="ClientSession.cpp">
+      <Filter>소스 파일\Network</Filter>
+    </ClCompile>
+    <ClCompile Include="Packet.cpp">
+      <Filter>소스 파일\Network</Filter>
+    </ClCompile>
+    <ClCompile Include="util.cpp">
+      <Filter>헤더 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IOCPNetwork.h">
@@ -43,6 +52,15 @@
     </ClInclude>
     <ClInclude Include="IServer.h">
       <Filter>소스 파일\Server</Filter>
+    </ClInclude>
+    <ClInclude Include="ClientSession.h">
+      <Filter>소스 파일\Network</Filter>
+    </ClInclude>
+    <ClInclude Include="Packet.h">
+      <Filter>소스 파일\Network</Filter>
+    </ClInclude>
+    <ClInclude Include="util.h">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
