--- a/IOCP_Study/IOCP_Study.vcxproj.filters
+++ b/IOCP_Study/IOCP_Study.vcxproj.filters
@@ -33,7 +33,7 @@
     <ClCompile Include="ClientSession.cpp">
       <Filter>소스 파일\Network</Filter>
     </ClCompile>
-    <ClCompile Include="Packet.cpp">
+    <ClCompile Include="PacketManager.cpp">
       <Filter>소스 파일\Network</Filter>
     </ClCompile>
     <ClCompile Include="util.cpp">
@@ -56,7 +56,7 @@
     <ClInclude Include="ClientSession.h">
       <Filter>소스 파일\Network</Filter>
     </ClInclude>
-    <ClInclude Include="Packet.h">
+    <ClInclude Include="PacketManager.h">
       <Filter>소스 파일\Network</Filter>
     </ClInclude>
     <ClInclude Include="util.h">
